@@ -1,3 +1,7 @@
+18 January 2012: Matthijs
+	- Fix bug #423: Fix up empty terminals after applying complete
+	  XFR, to make zone transfers go fast again
+
 10 January 2012: Wouter
 	- Remove unused variables.
 
